<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_title" >

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/general_category_title" >

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="hide_lockscreen_status_bar"
            android:title="@string/lockscreen_hide_status_bar_title"
            android:summary="@string/lockscreen_hide_status_bar_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="bouncer_user_switcher_enabled"
            android:title="@string/bouncer_user_switcher_title"
            android:summary="@string/bouncer_user_switcher_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="keyguard_affordance_single_tap"
            android:title="@string/keyguard_affordance_single_tap_title"
            android:summary="@string/keyguard_affordance_single_tap_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="auth_ripple_enabled"
            android:title="@string/enable_fingerprint_ripple_effect_title"
            android:summary="@string/enable_fingerprint_ripple_effect_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="fp_success_vibrate"
            android:title="@string/fp_success_vibrate_title"
            android:summary="@string/fp_success_vibrate_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="fp_error_vibrate"
            android:title="@string/fp_error_vibrate_title"
            android:summary="@string/fp_error_vibrate_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingListPreference
            android:key="screen_off_animation"
            android:title="@string/screen_off_animation_title"
            android:dialogTitle="@string/screen_off_animation_title"
            android:summary="%s"
            android:entries="@array/screen_off_animation_entries"
            android:entryValues="@array/screen_off_animation_values"
            android:defaultValue="0" />

        <Preference
            android:key="custom_clock_style"
            android:title="@string/lockscreen_custom_clock_style_title"
            android:summary="@string/lockscreen_custom_clock_style_summary"
            android:fragment="org.derpfest.customizations.fragment.CustomClockPreview" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="media_art_category"
        android:title="@string/ls_media_art_title" >

        <Preference
            android:key="media_art_settings"
            android:title="@string/ls_media_art_title"
            android:summary="@string/ls_media_art_summary"
            android:fragment="org.derpfest.customizations.fragment.MediaArtSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pulse_visualizer_category"
        android:title="@string/pulse_visualizer_category_title" >

        <Preference
            android:key="pulse_settings"
            android:title="@string/pulse_settings_title"
            android:summary="@string/pulse_settings_summary"
            android:fragment="org.derpfest.customizations.fragment.PulseSettings" />
    </PreferenceCategory>

</PreferenceScreen>
