<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misc_title" >

    <PreferenceCategory
        android:title="@string/security_category_title">

        <org.derpfest.support.preferences.GlobalSettingSwitchPreference
            android:key="window_ignore_secure"
            android:title="@string/ignore_window_secure_title"
            android:summary="@string/ignore_window_secure_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.GlobalSettingSwitchPreference
            android:key="hide_screen_capture_status"
            android:title="@string/hide_screen_capture_status_title"
            android:summary="@string/hide_screen_capture_status_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dashboard_category_title">

        <org.derpfest.support.preferences.SystemSettingIntListPreference
            android:key="theming_settings_dashboard_icons"
            android:title="@string/theming_settings_dashboard_icons_title"
            android:entries="@array/theming_settings_dashboard_icons_entries"
            android:entryValues="@array/theming_settings_dashboard_icons_values"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>
