<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/live_status_title">

    <Preference
        android:key="status_bar_dynamic_island"
        android:title="@string/status_bar_dynamic_island_title"
        android:summary="@string/status_bar_dynamic_island_summary"
        android:fragment="org.derpfest.customizations.fragment.statusbar.DynamicIslandSettings" />

    <Preference
        android:key="dynamic_bar"
        android:title="@string/dynamic_bar"
        android:summary="@string/dynamic_bar_enable_summary"
        android:fragment="org.derpfest.customizations.fragment.statusbar.DynamicBar" />

</PreferenceScreen>
